# bspline-fortran

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  bspline-fortran.fobis  bspline-fortran.md  build.sh  codecov.yml  ford.md  fpm.toml  index.html  robodoc.rc  search.html
.github/workflows/: CI.yml
interface/: b1fqad_func.html  bspline_1d.html  bspline_2d.html  bspline_3d.html  bspline_4d.html  bspline_5d.html  bspline_6d.html  db1ink.html  db1val.html  destroy_func.html  size_func.html
lists/: absint.html  files.html  modules.html  procedures.html  types.html
media/: bspline-fortran.py
module/: bspline_blas_module.html  bspline_defc_module.html  bspline_kinds_module.html  bspline_module.html  bspline_oo_module.html  bspline_sub_module.html
proc/: bspline_1d_constructor_auto_knots.html  bspline_1d_constructor_empty.html  bspline_1d_constructor_specify_knots.html  bspline_2d_constructor_auto_knots.html  bspline_2d_constructor_empty.html  bspline_2d_constructor_specify_knots.html  bspline_3d_constructor_auto_knots.html  bspline_3d_constructor_empty.html  bspline_3d_constructor_specify_knots.html  bspline_4d_constructor_auto_knots.html  bspline_4d_constructor_empty.html  bspline_4d_constructor_specify_knots.html  bspline_5d_constructor_auto_knots.html  bspline_5d_constructor_empty.html  bspline_5d_constructor_specify_knots.html  bspline_6d_constructor_auto_knots.html  bspline_6d_constructor_empty.html  bspline_6d_constructor_specify_knots.html  check_inputs.html  check_knot_vectors_sizes.html  check_value.html  clear_bspline_flag.html  dasum.html  daxpy.html  db1fqad.html  db1ink_alt.html  db1ink_alt_2.html  db1ink_default.html  db1sqad.html  db1val_alt.html  db1val_default.html  db2ink.html  db2val.html  db3ink.html  db3val.html  db4ink.html  db4val.html  db5ink.html  db5val.html  db6ink.html  (+88 more)
search/: search_database.json
sourcefile/: bspline_blas_module.f90.html  bspline_defc_module.f90.html  bspline_kinds_module.f90.html  bspline_module.f90.html  bspline_oo_module.f90.html  bspline_sub_module.f90.html
src/: bspline_blas_module.F90  bspline_defc_module.F90  bspline_defc_module.f90  bspline_kinds_module.F90  bspline_kinds_module.f90  bspline_module.f90  bspline_oo_module.f90  bspline_sub_module.f90  test.f90
src/tests/: bspline_extrap_test.f90  bspline_test.f90  bspline_test_2.f90  dbint4_test.f90  knot_tests.f90  speed_test.f90  speed_test_oo.f90  stack_size_test_oo.f90  test.f90  test_integrate.f90  test_oo.f90  test_regrid.f90
test/: bspline_defc_test.f90  bspline_extrap_test.f90  bspline_linear_test.f90  bspline_test.f90  bspline_test_2.f90  dbint4_test.f90  knot_tests.f90  speed_test.f90  speed_test_oo.f90  stack_size_test_oo.f90  test_integrate.f90
tipuesearch/: tipuesearch_content.js
type/: bspline_1d.html  bspline_2d.html  bspline_3d.html  bspline_4d.html  bspline_5d.html  bspline_6d.html  bspline_class.html
